2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/oprofiled.c: send alarm() after fork not before, behavior
	  changed between 2.4 and 2.6 and according to posix 2.6 is right.

2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_help.c: output the default unit mask. when querying the
	  default mask output it in decimal not hexadecimal
	* libpp/op_header.cpp: event number must be output as integer not as
	  unsigned char type
	* libop/op_parse_event.c: clarify error message

	* libop/op_events.c: better validation of unit mask
	* events/ia64/itanium2/unit_masks:
	* events/x86-64/hammer/unit_masks: fix so make check pass, done through
	  documentation reading.


2004-02-13  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4-ht/events: multiply all minimum count by two

2004-02-12  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_stats.c: handle new statistics added in callgraph patch

2004-02-11  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: fix normalise_events for default event.

2004-02-10  Will Cohen  <wcohen@redhat.com>

	* events/i386/p6_mobile/events:
	* events/i386/p6_mobile/unit_masks:
	* events/Makefile.am:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/op_help.c: Add support for Pentium M (Centrino).

2004-02-10  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4/events: s/instructions/uops/ when appropriate
	* events/i386/p4/unit_masks: change many bitmask to mandatory,
	  fix invalid default value, remove mask only used with HyperThreading
	* events/i386/p4-ht/unit_masks: s/bitmask/mandatory. Remove unused
	  unit mask

	* libop/op_events.h:
	* libop/op_events.c: warn if an unit mask is not used (this add a
	  warning for Itanium2, added in TODO)

	* libop/op_parse_event.c: don't silently accept invalid value as zero
	  (e.g FOO:3000:0xx21 was accepted as FOO:3000:0x0)

	* utils/opcontrol: mandatory default value was rejected because we