@@ -64,6 +64,7 @@ name:be_l1d_fpu_bubble type:exclusive default:0x00
 	0xf L1D_NATCONF
 
 # CPU_IA64_2 Table 11-43
+# FIXME: events using this is commented out in events
 #name:be_lost_bw_due_to_fe type:exclusive default:0x00
 #	0x0 ALL
 #	0x1 FEFLUSH
@@ -270,6 +271,7 @@ name:fe_lost type:exclusive default:0x0
 	0xd BUBBLE
 
 # CPU_IA64_2 Table 11-67, 11-79, 11-86, 11-90, 11-92 b0000 
+# FIXME: events using this is commented out in events
 #name:this type:exclusive default:0x0 
 #	0x0 THIS
 
@@ -297,6 +299,7 @@ name:l1i_prefetch_stall type:exclusive default:0x3
 	0x3 ALL
 
 # CPU_IA64_2 Table 11-76, 11-91 b0000
+# FIXME: events using this is commented out in events
 #name:l2_lines type:exclusive default:0x0
 #	0x0 ANY
 
@@ -310,6 +313,7 @@ name:l2_bypass type:exclusive default:0x0
 	0x6 L3_INST1
 
 # CPU_IA64_2 Table 11-78
+# FIXME: events using this is commented out in events
 #name:l2_data_references type:bitmask default:0x3
 #	0x1 L2_DATA_READS
 #	0x2 L2_DATA_WRITES
